<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- <item -->
    <!-- android:id="@+id/menu_pick_date" -->
    <!-- android:icon="@drawable/ic_action_calendar_day" -->
    <!-- android:orderInCategory="50" -->
    <!-- android:showAsAction="ifRoom" -->
    <!-- android:title="Pick Date"> -->
    <!-- </item> -->

    <item
            android:id="@+id/change_diary"
            android:icon="@drawable/ic_action_picture"
            android:orderInCategory="50"
            android:showAsAction="always"
            android:title="@string/change_diary"/>
    <item
            android:id="@+id/menu_create_diary"
            android:orderInCategory="90"
            android:showAsAction="never"
            android:title="@string/menu_create_diary"/>
    <item
            android:id="@+id/menu_delete_diary"
            android:orderInCategory="110"
            android:showAsAction="never"
            android:title="@string/delete_diary"/>
    <item
            android:id="@+id/menu_settings"
            android:orderInCategory="130"
            android:showAsAction="never"
            android:title="@string/menu_settings"/>
    <item
            android:id="@+id/register_dropbox"
            android:orderInCategory="150"
            android:showAsAction="never"
            android:title="@string/register_dropbox"/>

</menu>